style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
    --font-family: 'Roboto', sans-serif;
    --dark-gray: #1d1e1e;
    --light-gray: #2a2a2a;
    --lighter-gray: #7b7b7b;
    color: white;
    font: 16px/19px var(--font-family);
    height: 100%;
    margin: 0;
}

body {
    background-color: var(--dark-gray);
    height: 100%;
    margin: 0;
    display: flex;
    flex-direction: column;
    margin: 10px 525px 10px;
    padding: 20px 10px;
    box-sizing: border-box;
    overflow: hidden;
}

.todo-section {
    display: flex;
    flex-direction: column;
    gap: 10px;
    /* TODO: scroll on overflow */
    /* height: 100%;
    overflow-y: scroll; */
}

h1 {
    font: bold 32px/38px var(--font-family);
    margin: 5px 0px;
}

form {
    display: flex;
}

.input-field {
    width: 100%;
    background-color: var(--light-gray);
    border: none;
    border-radius: 7px;
    height: 45px;
    padding: 0px 10px;
    color: white;
}

.todo-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.todo {
    margin: 12px 0px;
    padding: 12px 23px;
    border: 1px solid var(--light-gray);
    border-style: solid none;
    transform: scale(1);
    transition: transform 100ms ease-in-out;
}

.todo label {
    display: flex;
    align-items: center;
}

.custom-checkbox {
    --size: .80em;
    display: inline-block;
    width: var(--size);
    height: var(--size);
    margin-right: var(--size);
    border: 1px solid var(--lighter-gray);
    border-radius: 3px;
}

p {
    margin: 0;
}

.todo:hover, .todo:has(> [type="checkbox"]:focus) {
    transform: scale(1.1);
    background-color: var(--light-gray);
    border-radius: 7px;
}

[type="checkbox"] {
    opacity: 0;
    position: absolute;
}

[type="checkbox"]:checked + label {
    opacity: .2;
}

[type="checkbox"]:checked + label p {
    text-decoration: line-through;
}

[type="checkbox"]:checked + label .custom-checkbox {
    background-color: var(--lighter-gray);
    /* --checked-color: #005a93;
    background-color: var(--checked-color);
    box-shadow: inset 0 0 0 2px var(--light-gray); */
}

.bottom-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: auto;
    height: 3.688rem;
    color: var(--lighter-gray);
}

.btn {
    cursor: pointer;
    background: 0;
    border: 0;
    padding: 0;
    font: 16px/19px var(--font-family);
    color: var(--lighter-gray);
    transform: scale(1);
    transition: transform 100ms ease-in-out;
}

.btn:hover {
    transform: scale(1.1)
}

